# snippets

./: .editorconfig  .gitignore  0002-triangle_trail.py  README.md  asyncio_curses_ui.py
0003-infix_calc/: README.md
0003-infix_calc/src/: main.rs  parser.rs  token.rs
0004-mandelbrot_sdl/: Makefile  README  README.md  main.c
0005-mandelbrot_opengl/: Makefile
0005-mandelbrot_opengl/src/: main.cpp
0006-genetic_minimum/: README.md  main.py  point.py
0007-qt6_cpp/: CMakeLists.txt  README
0007-qt6_cpp/src/: main.cpp
by_lang/amaranth/: axis_fifo.py  axis_submodule.py  consts_and_shapes.py  up_counter.py
by_lang/c/: function-macro.c  generics.c  int-calc-macro.c  linked-list.c  realloc-array.c  slice.c  string-lib.c  voidstar-array-size.c
by_lang/cpp/: clamp_inplace.cc  defer.hh  type-traits.cc
by_lang/janet/: defn-mutual.janet  named-let.janet  nest.janet
by_lang/lua/: fmt.lua
by_lang/makefiles/: README.md
by_lang/nim/: generational_map.nim
by_lang/python/: async-console.py  curses-asyncio.py  random-string.py  triangle-trail.py
by_lang/rust/: inline-methods.rs
by_lang/shell/: spinning-loading.sh  (+1 more)
c/: allocated-array.c  impl-upper.c  int-calc-macro.c
cpp/: custom-vec.cpp  dynamic-array.cpp  maybe.cpp  throwing-exceptions.cpp
makefiles/: README.md
nim/: generational_map.nim
python/: ball-guessgame-analysis.py  box-test2.py  random-string.py
racket/: fact.rkt
rust/: immutable-struct.rs  mpsc-multi.rs  web-server.rs
shell/: list-operations.bash  list-operations.sh  stack-operations.bash  weird-backspace.sh
zig/: any.zig
(+35 files in other folders)
